# daminGambit

./: .gitignore  PROMPTS.md  pyproject.toml  requirements.txt
.cursor/rules/: restart-and-lift.mdc
src/damin_gambit/: auth.py  cli.py  db.py  llm.py  nl.py  webapp.py
tests/: prompt_cases.json  test_auth_tenant.py  test_prompt_cases.py
